--- a/analysisData.ipynb
+++ b/analysisData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,43 @@
     "import pyproj\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (10, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "075c2b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>>>---------------------------------------------------------------------------<<<<<\n",
+      "    > Linux rossby 6.8.0-58-generic #60-Ubuntu SMP PREEMPT_DYNAMIC Fri Mar 14 18\n",
+      "    >\n",
+      "    > Home Dir  - /home/pvb\n",
+      "    > data      /data/pvb\n",
+      "    > Proyectos - /home/pvb/Proyectos\n",
+      "    > Analisis  - /home/pvb/Analisis\n",
+      "    > Data      - /data/pvb\n",
+      "    > Argo data - /data/pvb/Argo\n",
+      ">>>>>---------------------------------------------------------------------------<<<<<\n"
+     ]
+    }
+   ],
+   "source": [
+    "from globales import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7167f3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GlobalSU['DatPath'] = \"Your value here\""
    ]
   },
   {
@@ -265,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "54958a4a-4330-4f2a-aff1-f4b3eda57a21",
    "metadata": {},
    "outputs": [
@@ -332,6 +369,21 @@
     "    sst_unmasked = sst\n",
     "    sst = sst.where(mask)\n",
     "    print('>>>>> '+titulo)\n",
+    "elif  titulo_short == 'IBICan':\n",
+    "     #sst = DS.sst.sel(lat=slice(20, 50),lon=slice(325,360))\n",
+    "     #basins = xr.open_dataset(dataDir+'/basins.nc')\n",
+    "     #basin_surf = basins.basin[0]\n",
+    "     #basin_surf_interp = basin_surf.interp_like(sst, method='nearest')\n",
+    "     #sst = sst.where((basin_surf_interp==1) ,drop=True)\n",
+    "     sst = DS.sst.sel(lat=slice(20, 47),lon=slice(325,360))\n",
+    "     # Para blanquear el mediterraneo\n",
+    "     lat_point_list = [40, 40, 30, 30, 40]\n",
+    "     lon_point_list = [354.5, 360, 360, 354.5, 354.5]\n",
+    "     polygon_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
+    "     polygon = transform_polygon(polygon_geom)\n",
+    "     mask = np.array([[point_in_polygon(lon,lat,polygon) \n",
+    "                  for lon in sst.lon.values] \n",
+    "                  for lat in sst.lat.values])    \n",
     "        \n",
     "\n",
     "\n"
