udpate MUR analysis

--- a/analysisData.ipynb
+++ b/analysisData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "075c2b02",
    "metadata": {},
    "outputs": [
@@ -49,14 +49,13 @@
      "output_type": "stream",
      "text": [
       ">>>>>---------------------------------------------------------------------------<<<<<\n",
-      "    > Linux rossby 6.8.0-58-generic #60-Ubuntu SMP PREEMPT_DYNAMIC Fri Mar 14 18\n",
+      "    > Linux rossby 6.8.0-59-generic #61-Ubuntu SMP PREEMPT_DYNAMIC Fri Apr 11 23\n",
       "    >\n",
-      "    > Home Dir  - /home/pvb\n",
-      "    > data      /data/pvb\n",
-      "    > Proyectos - /home/pvb/Proyectos\n",
-      "    > Analisis  - /home/pvb/Analisis\n",
-      "    > Data      - /data/pvb\n",
-      "    > Argo data - /data/pvb/Argo\n",
+      "    > home    - /home/pvb\n",
+      "    > ProPath - /home/pvb/Proyectos\n",
+      "    > AnaPath - /home/pvb/Analisis\n",
+      "    > DatPath - /data/pvb\n",
+      "    > ArgoDta - /data/pvb/Argo\n",
       ">>>>>---------------------------------------------------------------------------<<<<<\n"
      ]
     }
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "96a0cb05",
    "metadata": {},
    "outputs": [],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fc159cfd",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "16fa8168-9a5e-450d-ac67-7e24fe1fad27",
    "metadata": {},
    "outputs": [],
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "95fc918c-c177-4c1c-bee5-efd9e7fe07fd",
    "metadata": {},
    "outputs": [],
@@ -132,42 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d11420d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HOME=os.environ['HOME']   \n",
-    "f = open(HOME+'/.env', 'r')\n",
-    "for line in f.readlines():\n",
-    "    Name=line.strip().split('=')[0]\n",
-    "    Content=line.strip().split('=')[-1]\n",
-    "    if Name=='dirData' or Name=='dirAnalisis':\n",
-    "        exec(Name + \"=\" + \"'\" + Content + \"'\")\n",
-    "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "b7a97b46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.uname().nodename.lower().find('eemmmbp') != -1:\n",
-    "    base_file = dirData + '/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir   = dirAnalisis + '/SSTGlobalAnalysis/data'\n",
-    "elif os.uname().nodename.lower().find('sagams') != -1:\n",
-    "    base_file = dirData + '/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir   = dirAnalisis + '/SSTGlobalAnalysis/data'\n",
-    "elif os.uname().nodename.lower().find('rossby') != -1:\n",
-    "    base_file = dirData + '/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
-    "    dataDir   = dirAnalisis + '/SSTGlobalAnalysis/data'"
+    "base_file = GlobalSU['DatPath'] + '/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'\n",
+    "dataDir   = GlobalSU['AnaPath'] + '/SSTGlobalAnalysis/data'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "2fad8099",
    "metadata": {},
    "outputs": [
@@ -177,7 +152,7 @@
        "'/data/pvb/Satelite/noaa.oisst.v2.highres/NC/sst.day.mean'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "3c26178c",
    "metadata": {},
    "outputs": [],
@@ -211,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "33e222c9",
    "metadata": {},
    "outputs": [],
@@ -221,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "a29d8320",
    "metadata": {},
    "outputs": [],
@@ -232,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "53a62410",
    "metadata": {},
    "outputs": [
@@ -250,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "609a9060",
    "metadata": {},
    "outputs": [],
@@ -260,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "1b51ef86",
    "metadata": {},
    "outputs": [],
@@ -268,16 +243,6 @@
     "DS = xr.open_mfdataset(files,parallel=True, \n",
     "                       combine_attrs= \"drop\",\n",
     "                       autoclose = True, data_vars='minimal', coords=\"minimal\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "9d63a86b-a734-46b6-80eb-d8f0545badfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DS = xr.open_mfdataset(files)"
    ]
   },
   {
