update to use Dask

--- a/analysisData_SelectPoints.ipynb
+++ b/analysisData_SelectPoints.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1df62f37-e43c-4f83-9107-5cebfdbacca9",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,8 @@
     "import pandas as pd\n",
     "from matplotlib.dates import DateFormatter\n",
     "\n",
-    "from dask.distributed import Client\n",
-    "from dask import delayed\n",
-    "import dask\n",
-    "\n",
-    "import cartopy.crs as ccrs\n",
     "import cartopy\n",
+    "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "\n",
     "from shapely.geometry import Polygon, Point\n",
@@ -150,9 +146,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xr=[-9.7299+360,  -15.2693+360,  -16.0000+360, -17.7162+360];\n",
-    "Yr=[32.1623,   24.8980,   29.7545,  18.9396];\n",
-    "Tr=['UP1','UP2','OC','DW']"
+    "#Xr=[-9.7299+360,  -15.2693+360,  -16.0000+360, -17.7162+360];\n",
+    "#Yr=[32.1623,   24.8980,   29.7545,  18.9396];\n",
+    "#Tr=['UP1','UP2','OC','DW']\n",
+    "\n",
+    "## Upwelling Iberian Peninsula\n",
+    "Xr=[-8.7285+360,-9.3249+360,-8.8008+360,-14.0963+360];\n",
+    "Yr=[36.9921,38.6057,41.2795,39.0843];\n",
+    "Tr=['UP3','UP4','UP5','OC2']\n",
+    "Cr=['b','b','b','r']"
    ]
   },
   {
